# CMakeTutorial

./: CMakeLists-1.txt  CMakeLists-2.txt  CMakeLists-3.txt  CMakeLists-4.txt  readme.md
CMakeLists-1-Test/: CMakeLists.txt
CMakeLists-1测试/: CMakeLists.txt  test01.cpp  test01.h
CMakeLists-2-Test/: CMakeLists.txt
CMakeLists-2测试/: CMakeLists.txt  test02.cpp
CMakeLists-3-Test/: CMakeLists.txt
CMakeLists-3-Test/include/: count.h
CMakeLists-3-Test/src/: test03.cpp
CMakeLists-3测试/: CMakeLists.txt
CMakeLists-3测试/src/: count.cpp
CMakeLists-4-Test/: CMakeLists.txt
CMakeLists-4测试/: CMakeLists.txt
CMakeLists-4测试/include/: test04.h
CMakeLists-4测试/src/: test04.cpp
CMakeLists-5-Test/: CMakeLists.txt  readme.md
CMakeLists-5-Test/inc/: mul.h
CMakeLists-5-Test/src/: CMakeLists.txt
CMakeLists-5测试/: CMakeLists.txt  run.sh
CMakeLists-5测试/libsrc/: CMakeLists.txt  mul.cpp
CMakeLists-5测试/src/: main.cpp
CMakeLists-6-Test/: CMakeLists.txt  main.cpp
CMakeLists-6-Test/sub/: add.h
CMakeLists-6测试/: CMakeLists.txt  readme.md  run.sh
CMakeLists-6测试/sub/: CMakeLists.txt  add.cpp
CMakeLists-7-Test/: CMakeLists.txt  readme.md
CMakeLists-7-Test/source/add/: CMakeLists.txt  add3.h
CMakeLists-7-Test/source/main/: main.cpp
CMakeLists-7-Test/source/mul/: CMakeLists.txt
CMakeLists-7测试/: CMakeLists.txt
CMakeLists-7测试/source/add/: CMakeLists.txt  add3.cpp
CMakeLists-7测试/source/main/: CMakeLists.txt
CMakeLists-7测试/source/sub/: CMakeLists.txt
CMakeLists-8-Test/: CMakeLists.txt  readme.md  run.sh
CMakeLists-8-Test/source/mul/: mul.cpp
CMakeLists-8测试/: CMakeLists.txt
CMakeLists-8测试/source/add/: add.cpp
CMakeLists-8测试/source/mul/: mul.h
CMakeLists-8测试/source/sub/: sub.cpp  sub.h
